--- a/style.css
+++ b/style.css
@@ -51,12 +51,5 @@ input:focus {
 }
 
 .tooltip {
-	display: inline-block;
-	margin-left: 20px;
-	padding: 2px 4px;
-	border: 1px solid #555;
-	background-color: #CCC;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
+	rder-radius: 4px;
 }
